refactor(core): move SysLog entity and mapper to common-core module
Move SysLog and SysLogMapper from system-service to common-core and
common-web for shared usage across services. Add Kafka Acknowledgment
support in search-service listener and normalize whitespace formatting.